Issue IMCMS-576 RB6: More chars in ID and PW - Cut text if email is too long. Show it on hover

--- a/src/main/webapp/imcms/css/admin/imcms-super-admin.css
+++ b/src/main/webapp/imcms/css/admin/imcms-super-admin.css
@@ -122,6 +122,12 @@
     overflow: hidden;
 }
 
+.imcms-user-info-row__email{
+    text-overflow:ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 .imcms-user-info-row .imcms-control {
     margin: 5px;
 }
